# adk-connector

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  run_my_agent.py
academic-research/: .env.example
academic-research/.adk/: connector_sessions.json  session.db
academic-research/academic_research/: __init__.py  agent.py
academic-research/academic_research/.adk/: connector_sessions.json  session.db
academic-research/academic_research/sub_agents/academic_newresearch/: agent.py
academic-research/academic_research/sub_agents/academic_websearch/: agent.py
adk-connector-js/: .gitignore  README.md  package-lock.json  package.json
adk-connector-js/src/: connector.ts  index.ts  types.ts
adk_connectors/: __init__.py  config.py  connector_manager.py  event_router.py  response_formatter.py  session_manager.py  tunnel.py
adk_connectors/discord/: __init__.py  adapter.py  config.py  connector.py  formatter.py  parser.py
adk_connectors/models/: incoming.py  outgoing.py
adk_connectors/storage/: json_file.py  memory.py
adk_connectors/telegram/: __init__.py  adapter.py  config.py  connector.py  formatter.py  parser.py
adk_connectors/whatsapp/: __init__.py  adapter.py  config.py  connector.py
adk_connectors/whatsapp/bridge/: bridge.js  package-lock.json  package.json
blog-writer/: example.md  hello.md  pyproject.toml
blog-writer/blogger_agent/: agent.py  config.py
blog-writer/blogger_agent/.adk/: connector_sessions.json  session.db
blog-writer/blogger_agent/sub_agents/: blog_editor.py  blog_planner.py  blog_writer.py  social_media_writer.py
blog-writer/blogger_agent/sub_agents/.adk/: session.db
docs/: architecture.md
examples/discord-basic/: .env.example  README.md  main.py
examples/telegram-basic/: README.md  main.py
my_agent/: agent.py
my_agent/.adk/: connector_sessions.json  session.db
tests/: test_connectors.py
