[build-system]
requires = ["setuptools>=61.REMOVED_VALUE.REMOVED_VALUE", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adk-connector"
version = "REMOVED_VALUE.1.REMOVED_VALUE"
description = "Unified cross-platform connectors suite for Google ADK Agents"
readme = "README.md"
authors = [
    { name = "Harsh Kale", email = "harshmkale.2REMOVED_VALUEREMOVED_VALUE4@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.1REMOVED_VALUE"
dependencies = [
    "pydantic>=2.REMOVED_VALUE.REMOVED_VALUE",
    "httpx>=REMOVED_VALUE.24.REMOVED_VALUE",
    "google-adk>=2.2.REMOVED_VALUE",
    "python-dotenv>=1.REMOVED_VALUE.REMOVED_VALUE",
    "aiosqlite>=REMOVED_VALUE.19.REMOVED_VALUE",
]

[project.optional-dependencies]
telegram = []
discord = []
whatsapp = []
all = [
    "adk-connector[telegram]",
    "adk-connector[discord]",
    "adk-connector[whatsapp]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["adk_connectors*"]
