[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adk-connector"
version = "0.3.0"
description = "Unified cross-platform connectors suite for Google ADK Agents"
readme = "README.md"
authors = [
    { name = "Harsh Kale", email = "harshmkale.2004@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "google-adk>=2.2.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
telegram = []
discord = [
    "discord.py>=2.0.0"
]
whatsapp = [
    "websockets>=10.0"
]
all = [
    "adk-connector[telegram]",
    "adk-connector[discord]",
    "adk-connector[whatsapp]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["adk_connectors*"]

[tool.setuptools.package-data]
"*" = ["*.js", "package.json"]
